[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/ui/black_cancel.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/magnifying-glass.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/pottaone-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/screens/settings_page/add_location/city_select/city.gd" type="Script" id=4]


[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.92549, 0.482353, 0.0745098, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = null

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 3 )

[node name="Node2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.164706, 0.470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="elements" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.25989
margin_top = -1.12244
margin_right = -1.25989
margin_bottom = -1.12244
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="elements"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -170.5
margin_right = 170.5
margin_bottom = 66.0
custom_fonts/font = SubResource( 1 )
text = "Selecting City"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="searchbar" type="Control" parent="elements"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="elements/searchbar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -164.5
margin_top = 80.6527
margin_right = 164.5
margin_bottom = 148.653
custom_fonts/font = SubResource( 2 )
placeholder_text = "Type City Name Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="elements/searchbar"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="touch_button" type="TouchScreenButton" parent="elements/searchbar/Control"]
position = Vector2( 195.973, 103.802 )
scale = Vector2( 0.109648, 0.109648 )
normal = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -396.5
margin_top = -103.683
margin_right = 396.5
margin_bottom = 265.317
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="elements/ScrollContainer"]
margin_right = 793.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="template" type="Button" parent="elements/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 793.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 5 )
text = "Pakistan"
clip_text = true
align = 0

[node name="HTTPRequest" type="HTTPRequest" parent="elements"]

[node name="loading" type="ColorRect" parent="elements"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.0
margin_top = -118.0
margin_right = 231.0
margin_bottom = 118.0
color = Color( 0.980392, 0.921569, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="elements/loading"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.5
margin_top = -29.5
margin_right = 85.5
margin_bottom = 29.5
custom_fonts/font = SubResource( 6 )
text = "Loading"

[node name="error" type="ColorRect" parent="elements"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.0
margin_top = -118.0
margin_right = 231.0
margin_bottom = 118.0
color = Color( 0.929412, 0.172549, 0.172549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="elements/error"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -29.5
margin_right = 57.0
margin_bottom = 29.5
custom_fonts/font = SubResource( 6 )
text = "Error"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="elements/error"]
position = Vector2( 410.012, -25.0491 )
scale = Vector2( 0.157071, 0.152933 )
normal = ExtResource( 1 )
[connection signal="pressed" from="elements/searchbar/Control/touch_button" to="." method="_on_touch_button_pressed"]
[connection signal="request_completed" from="elements/HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="elements/error/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
